--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.22.0",
+    "react-hot-loader": "4.13.0",
     "snazzy": "9.0.0",
     "standard": "16.0.3"
   }
